--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -35,6 +35,9 @@ jobs:
       - name: Set Image tag
         id: vars
         run: echo "tag=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
         uses: docker/build-push-action@v4
@@ -43,8 +46,6 @@ jobs:
           tags: ${{ steps.login-ecr.outputs.registry }}/${{env.IMAGE}}:${{steps.vars.outputs.tag}}
           push: true
           file: Dockerfile
-          cache-from: type=local,src=.docker-cache
-          cache-to: type=local,dest=.docker-cache
 
 
       - name: Checkout Infrastructure
