--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -6,7 +6,7 @@ on:
       - main
   workflow_dispatch:
 env:
-  IMAGE: deepsynth/deepsynth-client
+  IMAGE: deepsynth/deepsynth-landing
 jobs:
   build:
     name: Build Docker Image
@@ -56,13 +56,13 @@ jobs:
           token: ${{ secrets.PAT_ACCESS_TOKEN }}
       - name: Update deployment
         run: |
-          sed -i "s|image: .*|image: ${{ steps.login-ecr.outputs.registry }}/${{ env.IMAGE }}:${{ steps.vars.outputs.tag }}|" deployment/deepsynth-client.yaml
+          sed -i "s|image: .*|image: ${{ steps.login-ecr.outputs.registry }}/${{ env.IMAGE }}:${{ steps.vars.outputs.tag }}|" deployment/deepsynth-landing.yaml
 
       - name: Commit and push
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add .
-          git commit -m "chore(deepsynth-client): Deploy deepsynth-client:${{ steps.vars.outputs.tag }} for [${{ github.event.head_commit.message }}]"
+          git commit -m "chore(deepsynth-landing): Deploy deepsynth-landing:${{ steps.vars.outputs.tag }} for [${{ github.event.head_commit.message }}]"
           git pull --rebase
           git push
